# cpp_project_in_github

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE.md  README.md
.github/ISSUE_TEMPLATE/: feature_request.md  issue-report.md
.github/workflows/: ci.yml
cmakes/: compile_option.cmake
src/: main.cpp
